<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="screen_will_dim">Screen will dim in 15 seconds.</string>
	<string name="legend_light_sleep_trigger">Light Sleep Trigger</string>
	<string name="legend_movement">Movement</string>
	<string name="warming_up">Warming up sensors, please wait.</string>
	<string name="go_into_standy">Press your device\'s standby button</string>
	<string name="calibrate_directions_force_screen_on">
		<li>
			A bug exists on some devices that prevents the accelerometer from
			reporting changes while the screen is off.
		</li>
		\n
		<li>
			When prompted, put your device in standby and wait up to 10
			seconds.
		</li>
		\n
		<li>
			Your screen will be automatically turned back on. Unlock your
			phone if necessary.
		</li>
		\n
		<li>Press next to begin.</li>
	</string>
	<string name="calibrate_description_force_screen_on">
		<b>Goal:</b>
		Make sure that Force Screen On is enabled for devices that need it.
	</string>
	<string name="calibrate_title_force_screen_on">Force Screen On Calibration</string>
	<string name="analysis_y_axis_values">Y Axis Values</string>
	<string name="analysis_x_axis_values">X Axis Values</string>
	<string name="list">List</string>
	<string name="chart_view">Sleep Score Over Time</string>
	<string name="changes_made_to_these_settings">Changes to these settings will not take effect
		during this session.</string>
	<string name="gfx_designers">Graphic Designers</string>
	<string name="project_lead">Project Lead</string>
	<string name="developers">Developers</string>
	<string name="querying_sleep_database">Querying sleep database...</string>
	<string name="share_electricsleep">Share ElectricSleep</string>
	<string name="title_sleep_switches">Sleep Switches</string>
	<string name="fell_asleep">Time to Fall Asleep</string>
	<string name="note">Note</string>
	<string name="spikes">Spikes</string>
	<string name="duration">Duration</string>
	<string name="analysis">Analysis</string>
	<string name="sleep_score">Sleep Score</string>
	<string name="sleep_chart">Sleep Chart</string>
	<string name="could_not_save_sleep">Could not save this sleep:</string>
	<string name="sleep_too_brief_to_analyze">It was too brief to
		analyze.</string>
	<string name="note_title">Comment [optional] (dreams, disruptions,
		caffeine,
		etc.)</string>
	<string name="summary_pref_sensor_delay">Try changing this if you\'re having problems with
		sleep movement collection.</string>
	<string name="title_pref_sensor_delay">Sensor Delay</string>
	<string name="how_review">Your sleep movement graph is saved for later
		review. Analysis of sleep will be available for all records.</string>
	<string name="how_wake">Wake up! (With help of smart alarm or naturally.)</string>
	<string name="how_sleep">
		Place your Android device within a foot or two of you on your bed and
		press sleep.
		<br />
		<br />
		Go to sleep!
	</string>
	<string name="how_configure">Configure: set an optional smart alarm, adjust
		sensitivity of accelerometer and more.</string>
	<string name="title_report">Report Issue</string>
	<string name="summary_pref_analytics_off">Anonymous usage will not be uploaded</string>
	<string name="summary_pref_analytics_on">Anonymous usage will be uploaded</string>
	<string name="title_pref_analytics">Upload Anonymous Usage</string>
	<string name="pref_analytics">Allow Google Analytics</string>
	<string name="deleting_sleep">Deleting sleep</string>
	<string name="saving_sleep">Saving sleep</string>
	<string name="cancel">Cancel</string>
	<string name="manual">Manual</string>
	<string name="calibrate">Calibrate</string>
	<string name="password">Password</string>
	<string name="username">Username</string>
	<string name="account_creation">ElectricSleep Account Creation</string>
	<string name="skip_tutorial">Skip Tutorial</string>
	<string name="electricsleep_about">How ElectricSleep Works</string>
	<string name="electricsleep_description">
		\tElectricSleep is a new way to sleep. After you
		place your Android device within a foot or two of you on your
		bed,
		press sleep and
		ElectricSleep
		will record data from your device\'s
		accelerometer all
		night.\n\n
		\tThe movements it records signify
		sleep
		cycles. Aside
		from
		providing analysis and insight into your sleep
		patterns, you can
		set
		an alarm to wake you during light sleep, so you
		wake more easily
		than
		with a traditional alarm.
	</string>
	<string name="title_review_sleep">Review Sleep</string>
	<string name="title_welcome">Welcome to ElectricSleep!</string>
	<string name="no">No</string>
	<string name="yes">Yes</string>
	<string name="ok">OK</string>
	<string name="deleted_sleep_record">Deleted sleep record.</string>
	<string name="delete_sleep_record">Sleep record will be deleted.</string>
	<string name="about">About</string>
	<string name="welcome_tutorial">Welcome Tutorial</string>
	<string name="summary_pref_force_screen_off">Screen will be allowed to turn off during sleep. If
		you are having problems recording sleep throughout the night, enable
		this.</string>
	<string name="summary_pref_force_screen_on">Screen will be forced on and dimmed during sleep.
		If you are having problems recording sleep throughout the night,
		enable this.</string>
	<string name="title_pref_force_screen">Force Screen On</string>
	<string name="summary_pref_airplane_mode_off">Airplane mode will not be automatically enabled
		when sleeping</string>
	<string name="summary_pref_airplane_mode_on">Airplane mode will be automatically enabled when
		sleeping</string>
	<string name="title_pref_airplane_mode">Airplane Mode Sleep</string>
	<string name="summary_pref_silent_mode_off">Silent mode will not be automatically enabled
		when
		sleeping</string>
	<string name="summary_pref_silent_mode_on">Silent mode will be automatically enabled when
		sleeping</string>
	<string name="title_pref_silent_mode">Silent Mode Sleep</string>
	<string name="title_misc">Miscellaneous</string>
	<string name="rate_title">Rate how easily you awoke and how refreshed you
		feel:</string>
	<string name="save">Save</string>
	<string name="discard">Discard</string>
	<string name="home_last_sleep_title_text_empty">...</string>
	<string name="home_last_sleep_title_text">Last Night\'s Sleep Chart</string>
	<string name="home_review_title_text_empty">No sleep to review...</string>
	<string name="home_review_title_text">Sleep Averages</string>
	<string name="to">to</string>
	<string name="summary_pref_calibration">Tap to calibrate movement sensitivities
		automatically</string>
	<string name="title_pref_calibration">Calibration Wizard</string>
	<string name="pref_calibration">calibrationWizard</string>
	<string name="summary_pref_alarms">Manage ElectricSleep\'s built-in alarms - these are
		persistent even if Light Sleep Pre-Alarm is disabled.</string>
	<string name="preset">Preset:</string>
	<string name="summary_pref_use_alarm_off">ElectricSleep will not try to wake you up *before*
		the next enabled alarm in sleep mode</string>
	<string name="summary_pref_use_alarm_on">ElectricSleep is set to try to wake you up *before*
		the next
		enabled alarm in sleep mode</string>
	<string name="title_pref_use_alarm">Light Sleep Pre-Alarm</string>
	<string name="monitoring_sleep">Monitoring Sleep</string>
	<string name="movement_level_during_sleep">"&lt;-deep| Sleep |light-&gt;"</string>
	<string name="search">Search</string>
	<string name="invalid_settings">Your calibration settings are invalid. Please
		manually configure settings or run the Calibration Wizard.</string>
	<string name="message_recommend_calibration">
		\n\nIt is required that you run the Calibration
		Wizard or manually
		configure your Settings now.</string>
	<string name="message_prefs_not_compatible">Your preferences are not compatible with this
		version of ElectricSleep. They have been reset to the latest default
		values to prevent errors.</string>
	<string name="message_not_calibrated">You have not yet calibrated ElectricSleep to work
		on your device.</string>
	<string name="alarm_trigger_sensitivity_set_to">Alarm trigger sensitivity set to: </string>
	<string name="move_once">Move once.</string>
	<string name="start_moving">Start moving.</string>
	<string name="remain_still">Remain still.</string>
	<string name="calibration_failed">Calibration failed. Try again.</string>
	<string name="starting_in">Starting in 5 seconds</string>
	<string name="calibrate_title_results">Calibration Results</string>
	<string name="calibrate_directions_alarm">
		<li>
			A window will appear with a
			<b>graph that
				shows your movement</b>
			, and a
			<b>slider that controls a white threshold line</b>
			.
		</li>
		\n
		<li>
			Adjust the slider so that when you
			<b>move gently</b>
			, the
			<b>green line goes just above the white line</b>
			.
		</li>
		\n
		<li>
			Also ensure that when you
			<b>are still</b>
			, the
			<b>green line is significantly below the white line.</b>
		</li>
		\n
		<li>Press next to begin.</li>
	</string>
	<string name="calibrate_description_alarm">
		<b>Goal:</b>
		identify the amount of
		movement that signifies that you are in light
		sleep and set off alarms if enabled.
	</string>
	<string name="calibrate_title_alarm">Calibrate Light Sleep Sensitivity</string>
	<string name="calibrate_description_placement">
		ElectricSleep uses your device\'s accelerometer to record movement
		during sleep. As such, your device must move slightly when you move
		during the
		night.\n\n
		<li>
			<b>DO</b>
			place your device on within a foot or two of your body on your bed,
			couch, etc. where it will absorb vibrations as you move...
		</li>
		\n
		<li>
			<b>DO NOT</b>
			place your device near edges, very far your body, or
			cover
			it if it is
			charging.
		</li>
		\n
		<li>
			At this time,
			<b>situate yourself and your device exactly as you would when
				sleeping.</b>
		</li>
	</string>
	<string name="calibrate_title_placement">Device Placement</string>
	<string name="calibrate_title_welcome">Movement Calibration Wizard</string>
	<string name="finish">Finish</string>
	<string name="back">Back</string>
	<string name="next">Next</string>
	<string name="app_name">ElectricSleep Beta</string>
	<string name="description_logo">ElectricSleep</string>
	<string name="description_home">Home</string>
	<string name="description_search">Search</string>
	<string name="description_map">Map</string>
	<string name="description_refresh">Refresh</string>
	<string name="description_share">Share</string>
	<string name="description_export">Export</string>
	<string name="description_star">Star</string>
	<string name="title_sleep">Sleep</string>
	<string name="title_calibrate">Calibration</string>
	<string name="title_history">History</string>
	<string name="title_pref_alarm_trigger_sensitivity">Light Sleep Sensitivity</string>
	<string name="summary_alarm_trigger_sensitivity">Level of movement that signifies light sleep will
		trigger alarm
		to go off.</string>
	<string name="title_pref_alarm_window">Pre-Alarm Window</string>
	<string name="summary_pref_alarm_window">The window of time before the next enabled alarm is
		set to go
		off during which ElectricSleep will try to wake you.</string>
	<string name="title_pref_alarms">Alarms</string>
	<string name="alarm_in_silent_mode_title">Alarm in silent mode</string>
	<string name="alarm_in_silent_mode_summary">Play alarm even when the phone is in silent mode</string>
	<string name="snooze_duration_title">Snooze duration</string>
	<string name="alarm_volume_title">Alarm volume</string>
	<string name="alarm_volume_summary">Set the volume of alarms</string>
	<string name="volume_button_setting_title">Volume and Camera</string>
	<string name="volume_button_dialog_title">Button effect</string>
	<string name="volume_button_setting_summary">Set what these buttons do when pressed during an
		alarm</string>
</resources>